<resources>
    <string name="app_name" translatable="false">NeWork</string>
    <string name="author_avatar_image">The author\'s avatar</string>
    <string name="menu_option">Menu Options</string>
    <string name="image_content">Image content</string>
    <string name="button_like">Like</string>
    <string name="button_share">Share</string>
    <string name="button_users">Users</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="users">Users</string>
    <string name="button_new_post">Create a new post</string>
    <string name="button_new_event">Create a new event</string>
    <string name="button_play_event">Play the event</string>
    <string name="post">Post</string>
    <string name="likers">Likers</string>
    <string name="mentioned">Mentioned</string>
    <string name="event">Event</string>
    <string name="wall">Wall</string>
    <string name="jobs">Jobs</string>
    <string name="new_post">New post</string>
    <string name="whats_news">Whats news?</string>
    <string name="remove">Remove</string>
    <string name="button_add_photo">Add photo</string>
    <string name="button_add_file">Add file</string>
    <string name="button_add_location">Add location</string>
    <string name="button_choose_users">Choose users</string>
    <string name="new_event">New event</string>
    <string name="what_event">What event?</string>
    <string name="new_job">New job</string>
    <string name="name">Name</string>
    <string name="position">Position</string>
    <string name="link">Link</string>
    <string name="date_start">Date start</string>
    <string name="date_finish">Date finish</string>
    <string name="dash" translatable="false">" ‒ "</string>
    <string name="create">Сreate</string>
    <string name="button_select_date">Select date</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Don\'t have an account? Register</string>
    <string name="registration">Registration</string>
    <string name="address">Address</string>
    <string name="user">User</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="select_date">Select date</string>
    <string name="enter_dates">Enter dates</string>
    <string name="icon_calendar">Icon calendar</string>
    <string name="end_date">End date</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="mm_dd_yyyy_hh_mm">MM/dd/yyyy HH:mm</string>
    <string name="user_registered">The user is already registered</string>
    <string name="incorrect_photo_format">Incorrect photo format</string>
    <string name="empty_login">Empty login</string>
    <string name="empty_password">Empty password</string>
    <string name="unknown_error">Unknown error</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="user_not_found">User not found</string>
    <string name="empty_name">Empty name</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="connection_error">Connection error</string>
    <string name="button_add_job">Add job</string>
    <string name="login_enter">Login</string>
    <string name="login_register">Login</string>
    <string name="present_time">PT</string>
    <string name="non_working">Non-working</string>
    <string name="attachment_15MB">The file is more than 15 MB</string>
    <string name="empty_field">Empty field</string>
    <string name="invalid_date_format">Invalid date format</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="name_job">Name</string>
    <string name="participants">Participants</string>
    <string name="speakers">Speakers</string>
    <string name="select_users">Choose users</string>
    <string name="error_loading_photo">Error uploading photo</string>
</resources>