<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewPostFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        style="@style/Widget.Material3.AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/new_content_menu"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:title="@string/new_event" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/bottomBar"
        app:layout_constraintTop_toBottomOf="@id/topAppBar">

        <LinearLayout
            android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_default">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:hint="@string/what_event"
                android:inputType="textMultiLine"
                tools:text="@tools:sample/lorem[100]" />

            <FrameLayout
                android:id="@+id/image_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/image_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/image_content"
                    android:visibility="gone"
                    tools:src="@tools:sample/avatars"
                    tools:visibility="visible" />

                <Button
                    android:id="@+id/button_remove_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="@dimen/margin_default"
                    android:text="@string/remove" />

            </FrameLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottomBar"
        style="@style/Widget.Material3.BottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/add_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/button_add_photo"
            android:padding="@dimen/padding_button"
            android:src="@drawable/ic_photo_camera_24" />

        <ImageView
            android:id="@+id/add_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/button_add_file"
            android:padding="@dimen/padding_button"
            android:src="@drawable/ic_attach_file_24" />

        <ImageView
            android:id="@+id/choose_users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/button_choose_users"
            android:padding="@dimen/padding_button"
            android:src="@drawable/ic_people_24" />

        <ImageView
            android:id="@+id/add_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/button_add_location"
            android:padding="@dimen/padding_button"
            android:src="@drawable/ic_location_pin_24" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_select_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/margin_default"
        android:contentDescription="@string/button_select_date"
        android:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="@id/bottomBar"
        app:layout_constraintEnd_toEndOf="@id/bottomBar"
        app:layout_constraintTop_toTopOf="@id/bottomBar"
        app:srcCompat="@drawable/ic_add_24" />

</androidx.constraintlayout.widget.ConstraintLayout>