<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MaterialAlertDialog.Material3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DialogSelectDateEventFragment">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/dragHandle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_dialog_edge"
        android:hint="@string/date"
        app:endIconDrawable="@drawable/ic_today_24"
        app:endIconMode="custom"
        app:helperText="@string/mm_dd_yyyy_hh_mm"
        app:helperTextEnabled="true"
        app:layout_constraintTop_toTopOf="@id/dragHandle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="datetime" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/type"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_dialog_edge"
        android:checkedButton="@+id/radio_button_1"
        app:layout_constraintTop_toBottomOf="@id/header">

        <RadioButton
            android:id="@+id/radio_button_online"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/online" />

        <RadioButton
            android:id="@+id/radio_button_offline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/offline" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>